--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,13 @@
 
 <body>
   <div class="container">
-    <div id="clip"></div>
+    <div id="clipDisplay">
+      <iframe id="currentClip" height="480" width="854" frameborder="0" allowfullscreen autoplay=true></iframe>
+    </div>
+    <div class="navigation">
+      <button id="prevButton" class="btn">Previous</button>
+      <button id="nextButton" class="btn">Next</button>
+    </div>
   </div>
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
   <script src="app.js"></script>
