Replace buttons by arrow and add animation

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
 
 <body>
   <div class="container">
+    <div class="navigation top">
+      <div class="arrow" id="topArrow">&#9650;</div>
+    </div>
     <div id="clipDisplay">
       <iframe id="currentClip" height="480" width="854" frameborder="0" allowfullscreen autoplay=true></iframe>
     </div>
-    <div class="navigation">
-      <button id="prevButton" class="btn">Previous</button>
-      <button id="nextButton" class="btn">Next</button>
+    <div class="navigation bottom">
+      <div class="arrow" id="bottomArrow">&#9660;</div>
     </div>
   </div>
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
